# hive-cli

./: .env.example  .gitignore  Makefile  OWNERS  README.md  config-mini.yaml  config.yaml  hive-mini.yaml  hive.yaml  pyproject.toml  start.sh
.github/ISSUE_TEMPLATE/: BUG.md  CLEANUP.md  ENHANCEMENT.md
.github/workflows/: python-ci.yaml  workflow-ci.yaml  workflow-init.yaml
docs/: how_to_run_hive.md
libraries/: pyproject.toml
libraries/sandbox_utils/: launch_sandbox_test.py
libs/: Dockerfile  main.py
libs/sandbox_utils/: launch_sandbox.py  overlay_test.py
src/hive_cli/: config.py  main.py
src/hive_cli/libs/: Dockerfile  main.py
src/hive_cli/platform/: base.py  k8s.py  onprem.py
src/hive_cli/runtime/: runtime.py
src/hive_cli/utils/: image.py  time.py
tests/sandbox/: main_test.py  overlay_test.py
